--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta charset="UTF-8">
 
     <title> GoWs Wiki </title>
-    <link type="Image/x-icon" href="/Images/Favicon.svg" rel="icon">
+    <link type="Image/x-icon" href="./Images/Favicon.svg" rel="icon">
 
-    <link rel="stylesheet" href="/Sass/index.css">
+    <link rel="stylesheet" href="./Sass/index.css">
 
-    <script src="/Js/index.js"></script>
+    <script src="./Js/index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
@@ -18,8 +18,8 @@
 
 <body>
     <div class="navMenu">
-        <img class="BladesOfChaos" src="/Images/BladeOfChaos.png" alt="img">
-        <img class="logo" src="/Images/logo.png" alt="logo">
+        <img class="BladesOfChaos" src="./Images/BladeOfChaos.png" alt="img">
+        <img class="logo" src="./Images/logo.png" alt="logo">
         <div class="nav">
             <a href='#GoW(франшиза)'>
                 <p> God of War (франшиза) </p>
@@ -43,68 +43,68 @@
         <img class="upperGradient" src="./Images/Rectangle25.png" alt="">
         <div class="GameSeriaesConteiner">
             <div class="Games">
-            <a href="/OtherHTML/GoW_Ascension/GoW_Ascension.html">
+            <a href="./OtherHTML/GoW_Ascension/GoW_Ascension.html">
                 <p id="GoW:Ascension" class="GoW"> God of War: Ascension </p>
             </a>
-            <a href="/OtherHTML/GoW_ChainsOfOlympus/GoW_ChainsOfOlympus.html">
+            <a href="./OtherHTML/GoW_ChainsOfOlympus/GoW_ChainsOfOlympus.html">
                 <p id="GoW:ChainsOfOlympus" class="GoW"> God of War: Chains of Olympus </p>
             </a>
-            <a href="/OtherHTML/GoW(2005)/GoW(2005).html">
+            <a href="./OtherHTML/GoW(2005)/GoW(2005).html">
                 <p id="GoW_2005" class="GoW"> God of War (2005) </p>
             </a>
-            <a href="/OtherHTML/GoW_GhostofSparta/GoW_GhostofSparta.html">
+            <a href="./OtherHTML/GoW_GhostofSparta/GoW_GhostofSparta.html">
                 <p id="GoW:GhostOfSparta" class="GoW"> God of War: Ghost of Sparta </p>
             </a>
-            <a href="/OtherHTML/GoW_Betrayal/GoW_Betrayal.html">
+            <a href="./OtherHTML/GoW_Betrayal/GoW_Betrayal.html">
                 <p id="GoW:Betrayal" class="GoW"> God of War: Betrayal </p>
             </a>
-            <a href="/OtherHTML/GoW_II/GoW_II.html">
+            <a href="./OtherHTML/GoW_II/GoW_II.html">
                 <p id="GoW:II" class="GoW"> God of War II </p>
             </a>
-            <a href="/OtherHTML/GoW_III/GoW_III.html">
+            <a href="./OtherHTML/GoW_III/GoW_III.html">
                 <p id="GoW:III" class="GoW"> God of War III </p>
             </a>
-            <a href="/OtherHTML/GoW(2018)/GoW(2018).html">
+            <a href="./OtherHTML/GoW(2018)/GoW(2018).html">
                 <p id="GoW_2018" class="GoW"> God of War (2018) </p>
             </a>
-            <a href="/OtherHTML/GoW_Ragnarök/GoW_Ragnarök.html">
+            <a href="./OtherHTML/GoW_Ragnarök/GoW_Ragnarök.html">
                 <p id="GoW:Ragnarok" class="GoW"> God of War: Ragnarök </p>
             </a>
         </div>
             <div class="DivImageOfTheGame">
-                <img class="ImageOfTheGame" id="ImageOfTheGame" src="/Images/God_of_War-_Ascension2.jpg" alt="GoW: Ascension">
+                <img class="ImageOfTheGame" id="ImageOfTheGame" src="./Images/God_of_War-_Ascension2.jpg" alt="GoW: Ascension">
             </div>
         </div>
         <img class="lowerGradient" src="./Images/Rectangle26.png" alt="">
     </div>
     <div class="GameSeriaesMobile">
         <h3> Серия игр God of War </h3>
-        <a href="/OtherHTML/GoW_Ascension/GoW_Ascension.html">
-            <img src="/Images/GameSeriesMobile/Asc.png" alt="Gow:Ascension">
+        <a href="./OtherHTML/GoW_Ascension/GoW_Ascension.html">
+            <img src="./Images/GameSeriesMobile/Asc.png" alt="Gow:Ascension">
         </a>
-        <a href="/OtherHTML/GoW_ChainsOfOlympus/GoW_ChainsOfOlympus.html">
-            <img src="/Images/GameSeriesMobile/CoO.png" alt="GoW:CoO">
+        <a href="./OtherHTML/GoW_ChainsOfOlympus/GoW_ChainsOfOlympus.html">
+            <img src="./Images/GameSeriesMobile/CoO.png" alt="GoW:CoO">
         </a>
-        <a href="/OtherHTML/GoW(2005)/GoW(2005).html">
-            <img src="/Images/GameSeriesMobile/2005.png" alt="GoW:2005">
+        <a href="./OtherHTML/GoW(2005)/GoW(2005).html">
+            <img src="./Images/GameSeriesMobile/2005.png" alt="GoW:2005">
         </a>
-        <a href="/OtherHTML/GoW_GhostofSparta/GoW_GhostofSparta.html">
-            <img src="/Images/GameSeriesMobile/GoS.png" alt="GoW:GoS">
+        <a href="./OtherHTML/GoW_GhostofSparta/GoW_GhostofSparta.html">
+            <img src="./Images/GameSeriesMobile/GoS.png" alt="GoW:GoS">
         </a>
-        <a href="/OtherHTML/GoW_Betrayal/GoW_Betrayal.html">
-            <img src="/Images/GameSeriesMobile/Betrayal.png" alt="GoW:Betrayal">
+        <a href="./OtherHTML/GoW_Betrayal/GoW_Betrayal.html">
+            <img src="./Images/GameSeriesMobile/Betrayal.png" alt="GoW:Betrayal">
         </a>
-        <a href="/OtherHTML/GoW_II/GoW_II.html">
-            <img src="/Images/GameSeriesMobile/II.png" alt="GoW:II">
+        <a href="./OtherHTML/GoW_II/GoW_II.html">
+            <img src="./Images/GameSeriesMobile/II.png" alt="GoW:II">
         </a>
-        <a href="/OtherHTML/GoW_III/GoW_III.html">
-            <img src="/Images/GameSeriesMobile/III.png" alt="GoW:III">
+        <a href="./OtherHTML/GoW_III/GoW_III.html">
+            <img src="./Images/GameSeriesMobile/III.png" alt="GoW:III">
         </a>
-        <a href="/OtherHTML/GoW(2018)/GoW(2018).html">
-            <img src="/Images/GameSeriesMobile/2018.png" alt="GoW:2018">
+        <a href="./OtherHTML/GoW(2018)/GoW(2018).html">
+            <img src="./Images/GameSeriesMobile/2018.png" alt="GoW:2018">
         </a>
-        <a href="/OtherHTML/GoW_Ragnarök/GoW_Ragnarök.html">
-            <img src="/Images/GameSeriesMobile/Ragnarok.png" alt="GoW:Ragnarök">
+        <a href="./OtherHTML/GoW_Ragnarök/GoW_Ragnarök.html">
+            <img src="./Images/GameSeriesMobile/Ragnarok.png" alt="GoW:Ragnarök">
         </a>
     </div>
     <div class="mainContent">
