--- a/OtherHTML/GoW(2005)/GoW(2005).html
+++ b/OtherHTML/GoW(2005)/GoW(2005).html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title> GoWs Wiki: GoW(2005) </title>
-    <link type="Image/x-icon" href="/Images/Favicon.svg" rel="icon">
+    <link type="Image/x-icon" href="../../Images/Favicon.svg" rel="icon">
 
     <link rel="stylesheet" href="../GoW(2005)/Sass/GoW2005.css">
 
@@ -16,10 +16,10 @@
 
 <body>
     <div class="navMenu">
-        <img class="BladesOfChaos" src="/Images/BladeOfChaos.png" alt="BladesOfChaos">
-        <img class="Axe" src="/Images/Axe/Axe.png" alt="Axe">
-        <a href="/index.html" class="logo">
-            <img src="/Images/logo.png" alt="logo">
+        <img class="BladesOfChaos" src="../../Images/BladeOfChaos.png" alt="BladesOfChaos">
+        <img class="Axe" src="../../Images/Axe/Axe.png" alt="Axe">
+        <a href="../../index.html" class="logo">
+            <img src="../../Images/logo.png" alt="logo">
         </a>
         <div class="nav">
             <a href="#Description">
@@ -696,6 +696,6 @@
         </div>
     </div>
 </body>
-<script src="/Js/others.js"></script>
+<script src="../../Js/others.js"></script>
 
 </html>
