--- a/OtherHTML/GoW(2018)/GoW(2018).html
+++ b/OtherHTML/GoW(2018)/GoW(2018).html
@@ -6,11 +6,11 @@
     <meta charset="UTF-8">
 
     <title> GoWs Wiki: GoW(2018) </title>
-    <link type="Image/x-icon" href="/Images/Favicon.svg" rel="icon">
+    <link type="Image/x-icon" href="../../Images/Favicon.svg" rel="icon">
 
     <link rel="stylesheet" href="../GoW(2018)/Sass/GoW2018.css">
 
-    <script src="/Js/others.js"></script>
+    <script src="../../Js/others.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
@@ -18,10 +18,10 @@
 
 <body>
     <div class="navMenu">
-        <img class="BladesOfChaos" src="/Images/BladeOfChaos.png" alt="BladesOfChaos">
-        <img class="Axe" src="/Images/Axe/Axe.png" alt="Axe">
-        <a href="/index.html" class="logo">
-            <img src="/Images/logo.png" alt="logo">
+        <img class="BladesOfChaos" src="../../Images/BladeOfChaos.png" alt="BladesOfChaos">
+        <img class="Axe" src="../../Images/Axe/Axe.png" alt="Axe">
+        <a href="../../index.html" class="logo">
+            <img src="../../Images/logo.png" alt="logo">
         </a>
         <div class="nav">
             <a href="#Description">
