--- a/OtherHTML/GoW_III/GoW_III.html
+++ b/OtherHTML/GoW_III/GoW_III.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title> GoWs Wiki: GoW_III </title>
-    <link type="Image/x-icon" href="/Images/Favicon.svg" rel="icon">
+    <link type="Image/x-icon" href="../../Images/Favicon.svg" rel="icon">
 
     <link rel="stylesheet" href="../GoW_III/Sass/GoW_III.css">
 
@@ -15,11 +15,11 @@
 </head>
 
 <body>
-    <img class="BladesOfChaos" src="/Images/BladeOfChaos.png" alt="BladesOfChaos">
+    <img class="BladesOfChaos" src="../../Images/BladeOfChaos.png" alt="BladesOfChaos">
     <div class="navMenu">
-        <img class="Axe" src="/Images/Axe/Axe.png" alt="Axe">
-        <a href="/index.html" class="logo">
-            <img src="/Images/logo.png" alt="logo">
+        <img class="Axe" src="../../Images/Axe/Axe.png" alt="Axe">
+        <a href="../../index.html" class="logo">
+            <img src="../../Images/logo.png" alt="logo">
         </a>
         <div class="nav">
             <a href="#Description">
@@ -1490,6 +1490,6 @@
         </div>
     </div>
 </body>
-<script src="/Js/others.js"></script>
+<script src="../../Js/others.js"></script>
 
 </html>
