--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </div>
     <div>
-        <p> Серия игр God of War </p>
+        <p class="GameSeriesLabel"> Серия игр God of War </p>
         <img class="upperGradient" src="./Images/Rectangle25.png" alt="">
         <div class="GameSeriaesConteiner">
             <div class="Games">
