--- a/OtherHTML/GoW(2005)/GoW(2005).html
+++ b/OtherHTML/GoW(2005)/GoW(2005).html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
 
     <title> GoWs Wiki: GoW(2005) </title>
     <link type="Image/x-icon" href="../../Images/Favicon.svg" rel="icon">
 
     <link rel="stylesheet" href="../GoW(2005)/Sass/GoW2005.css">
 
+    <script src="../../Js/others.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 </head>
 
 <body>
-    <div class="navMenu">
+    <section class="navMenu">
         <img class="BladesOfChaos" src="../../Images/BladeOfChaos.png" alt="BladesOfChaos">
         <img class="Axe" src="../../Images/Axe/Axe.png" alt="Axe">
         <a href="../../index.html" class="logo">
@@ -94,8 +96,8 @@
                 <p> Боссы </p>
             </a>
         </div>
-    </div>
-    <div class="mainContent">
+    </section>
+    <section class="mainContent">
         <div>
             <h3 id="Description"> Общее описание </h3>
             <div>
@@ -623,79 +625,77 @@
         <div>
             <h3 id="Enemies"> Вражеские существа </h3>
             <div class="Enemies">
-                <div>
+                <figure>
                     <img src="./Images/Enemies/Undead_Legionnaire.webp" alt="Olympus Sentry">
                     <p> Легионер Олимпа </p>
-                </div>
-                <div>
+                </figure>
+                <figure>
                     <img src="./Images/Enemies/Undead_Archer_2.webp" alt="Olympus Archer">
                     <p> Лучник Олимпа </p>
-                </div>
-                <div>
+                </figure>
+                <figure>
                     <img src="./Images/Enemies/Minotaure_GOW_III.webp" alt="Minotaure">
                     <p> Менотавр </p>
-                </div>
-                <div>
+                </figure>
+                <figure>
                     <img src="./Images/Enemies/Polyphemus-Concept.webp" alt="Cyclopes">
                     <p> Циклоп </p>
-                </div>
-                <div>
+                </figure>
+                <figure>
                     <img class="enemyImage" src="./Images/Enemies/15_AndrewKim_Harpy.webp" alt="Harper">
                     <p> Гарпия </p>
-                </div>
-                <div>
+                </figure>
+                <figure>
                     <img src="./Images/Enemies/Wraithh.webp" alt="Wraiths">
                     <p> Призрак </p>
-                </div>
-                <div>
+                </figure>
+                <figure>
                     <img src="./Images/Enemies/Gorgon_(God_of_War_Chains_of_Olympus).webp" alt="Gorgon">
                     <p> Гаргона </p>
-                </div>
-                <div>
+                </figure>
+                <figure>
                     <img src="./Images/Enemies/Siren_2.webp" alt="Siren">
                     <p> Сирена </p>
-                </div>
-                <div>
+                </figure>
+                <figure>
                     <img src="./Images/Enemies/Satyre_GOW_III.webp" alt="Satyr">
                     <p> распутник </p>
-                </div>
-                <div>
+                </figure>
+                <figure>
                     <img src="./Images/Enemies/Centaur.webp" alt="Centaur">
                     <p> Центавр </p>
-                </div>
-                <div>
+                </figure>
+                <figure>
                     <img src="./Images/Enemies/Cerberus_Breeder.webp" alt="Cerberus">
                     <p> Цербер </p>
-                </div>
-                <div>
+                </figure>
+                <figure>
                     <img src="./Images/Enemies/Cerberus_Puppy.webp" alt="Cerberus Seed">
                     <p> Маленький Цербер </p>
-                </div>
+                </figure>
             </div>
         </div>
         <div>
             <h3 id="Bosses"> Боссы </h3>
             <div class="Bosses">
-                <div>
+                <figure>
                     <img src="./Images/Bosses/Hydra.webp" alt="Hydra">
                     <p> Гидра </p>
-                </div>
-                <div>
+                </figure>
+                <figure>
                     <img src="./Images/Bosses/Medusa_1.webp" alt="Medusa">
                     <p> Медуза </p>
-                </div>
-                <div>
+                </figure>
+                <figure>
                     <img src="./Images/Bosses/Minotaurbossarmored_2.webp" alt="Pandora's Guardian">
                     <p> Хранитель Пандоры </p>
-                </div>
-                <div>
+                </figure>
+                <figure>
                     <img src="./Images/Bosses/Ares1.webp" alt="Ares">
                     <p> Арес </p>
-                </div>
+                </figure>
             </div>
         </div>
-    </div>
+    </section>
 </body>
-<script src="../../Js/others.js"></script>
-
 </html>
