--- a/OtherHTML/GoW(2018)/GoW(2018).html
+++ b/OtherHTML/GoW(2018)/GoW(2018).html
@@ -12,12 +12,12 @@
 
     <script src="../../Js/others.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 </head>
 
 <body>
-    <div class="navMenu">
+    <section class="navMenu">
         <img class="BladesOfChaos" src="../../Images/BladeOfChaos.png" alt="BladesOfChaos">
         <img class="Axe" src="../../Images/Axe/Axe.png" alt="Axe">
         <a href="../../index.html" class="logo">
@@ -32,7 +32,7 @@
             </a>
             <div id="showToggleMenu">
                 <a href="#Characters_Weapons">
-                    <p> Персонажи и оружие </p>
+                    <p> Персонажи </p>
                 </a>
                 <div class="toggleMenu">
                     <ul class="toggleList">
@@ -100,14 +100,14 @@
                 </div>
             </div>
             <a href="#Enemies">
-                <p> Вражеские существа </p>
+                <p> Враги </p>
             </a>
             <a href="#Bosses">
                 <p> Боссы </p>
             </a>
         </div>
-    </div>
-    <div class="mainContent">
+    </section>
+    <section class="mainContent">
         <div>
             <h3 id="Description"> Общее описание </h3>
             <div>
@@ -1305,7 +1305,7 @@
                 </figure>
             </div>
         </div>
-    </div>
+    </section>
 </body>
 
 </html>
