--- a/OtherHTML/GoW_ChainsOfOlympus/GoW_ChainsOfOlympus.html
+++ b/OtherHTML/GoW_ChainsOfOlympus/GoW_ChainsOfOlympus.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
 
     <title> GoWs Wiki: ChainsOfOlympus </title>
     <link type="Image/x-icon" href="../../Images/Favicon.svg" rel="icon">
 
     <link rel="stylesheet" href="../GoW_ChainsOfOlympus/Sass/GoW_ChainsOfOlympus.css">
 
+    <script src="../../Js/others.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 </head>
 
 <body>
-    <div class="navMenu">
+    <section class="navMenu">
         <img class="BladesOfChaos" src="../../Images/BladeOfChaos.png" alt="BladesOfChaos">
         <img class="Axe" src="../../Images/Axe/Axe.png" alt="Axe">
         <a href="../../index.html" class="logo">
@@ -30,7 +32,7 @@
             </a>
             <div id="showToggleMenu">
                 <a href="#Characters_Weapons">
-                    <p> Персонажи и оружие </p>
+                    <p> Персонажи </p>
                 </a>
                 <div class="toggleMenu">
                     <ul class="toggleList">
@@ -78,14 +80,14 @@
                 </div>
             </div>
             <a href="#Enemies">
-                <p> Вражеские существа </p>
+                <p> Враги </p>
             </a>
             <a href="#Bosses">
                 <p> Боссы </p>
             </a>
         </div>
-    </div>
-    <div class="mainContent">
+    </section>
+    <section class="mainContent">
         <div>
             <h3 id="Description"> Общее описание </h3>
             <div>
@@ -487,8 +489,6 @@
                 </figure>
             </div>
         </div>
-    </div>
+    </section>
 </body>
-<script src="../../Js/others.js"></script>
-
 </html>
