--- a/OtherHTML/GoW_GhostofSparta/GoW_GhostofSparta.html
+++ b/OtherHTML/GoW_GhostofSparta/GoW_GhostofSparta.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
 
     <title> GoWs Wiki: GhostofSparta </title>
     <link type="Image/x-icon" href="../../Images/Favicon.svg" rel="icon">
 
     <link rel="stylesheet" href="../GoW_GhostofSparta/Sass/GoW_GhostofSparta.css">
-
+    
+    <script src="../../Js/others.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 </head>
 
 <body>
-    <div class="navMenu">
+    <section class="navMenu">
         <img class="BladesOfChaos" src="../../Images/BladeOfChaos.png" alt="BladesOfChaos">
         <img class="Axe" src="../../Images/Axe/Axe.png" alt="Axe">
         <a href="../../index.html" class="logo">
@@ -26,11 +28,11 @@
                 <p> Общее описание </p>
             </a>
             <a href="#Plot">
-                <p> Повествование сюжета </p>
+                <p> Повествование сюжет </p>
             </a>
             <div id="showToggleMenu">
                 <a href="#Characters_Weapons">
-                    <p> Персонажи и оружие </p>
+                    <p> Персонажи </p>
                 </a>
                 <div class="toggleMenu">
                     <ul class="toggleList">
@@ -118,14 +120,14 @@
                 </div>
             </div>
             <a href="#Enemies">
-                <p> Вражеские существа </p>
+                <p> Враги </p>
             </a>
             <a href="#Bosses">
                 <p> Боссы </p>
             </a>
         </div>
-    </div>
-    <div class="mainContent">
+    </section>
+    <section class="mainContent">
         <div>
             <h3 id="Description"> Общее описание </h3>
             <div>
@@ -1077,23 +1079,23 @@
                         произошло через несколько недель или месяцев. Однако это может быть возможно, потому что Кратос
                         и другие могущественные воины были на острове, убили большинство монстров и решили половину
                         головоломок, что немного облегчило путешествие «Последнего спартанца». </p>
-                    <p>
-                        Однако, согласно роману God of War II, Последний Спартанец прибыл на Остров Творения раньше
-                        Кратоса, что делает его подвиги поистине невероятными для такого смертного, как он. Учитывая,
-                        что он столкнулся с Кратосом в противоположном конце комнаты, можно сделать вывод, что Последний
-                        Спартанец пробивался совершенно другим путем, чем Кратос во время их экспедиции. Если это
-                        правда, это говорит о способностях Последнего Спартанца, поскольку Сестры Судьбы уединились
-                        таким образом, чтобы сделать их как можно более недоступными для любого существа, когда-либо
-                        встретившегося с ними лично, а это означает, что он должен был превосходить полчища злобных
-                        монстров и смертоносных ловушки и не воспользовавшись собственным прогрессом Кратоса. Его навыки
-                        в бою и выживании, кажется, соперничают с навыками Персея или Короля варваров. Согласно Кратосу
-                        в God of War (2018), Последний спартанец и другие спартанцы были великими воинами и обучались с
-                        самого рождения.
-                    </p>
-                    <p>
-                        Последний спартанец также был компетентен в других задачах, поскольку он мог управлять городом
-                        для выполнения архитектурных обязанностей. Он также умел обращаться с оружием, так как
-                        позаботился об оружии Спарты для Кратоса, которое было в идеальном состоянии.
+                        <p>
+                            Однако, согласно роману God of War II, Последний Спартанец прибыл на Остров Творения раньше
+                            Кратоса, что делает его подвиги поистине невероятными для такого смертного, как он. Учитывая,
+                            что он столкнулся с Кратосом в противоположном конце комнаты, можно сделать вывод, что Последний
+                            Спартанец пробивался совершенно другим путем, чем Кратос во время их экспедиции. Если это
+                            правда, это говорит о способностях Последнего Спартанца, поскольку Сестры Судьбы уединились
+                            таким образом, чтобы сделать их как можно более недоступными для любого существа, когда-либо
+                            встретившегося с ними лично, а это означает, что он должен был превосходить полчища злобных
+                            монстров и смертоносных ловушки и не воспользовавшись собственным прогрессом Кратоса. Его навыки
+                            в бою и выживании, кажется, соперничают с навыками Персея или Короля варваров. Согласно Кратосу
+                            в God of War (2018), Последний спартанец и другие спартанцы были великими воинами и обучались с
+                            самого рождения.
+                        </p>
+                        <p>
+                            Последний спартанец также был компетентен в других задачах, поскольку он мог управлять городом
+                            для выполнения архитектурных обязанностей. Он также умел обращаться с оружием, так как
+                            позаботился об оружии Спарты для Кратоса, которое было в идеальном состоянии.
                     </p>
                 </div>
             </div>
@@ -1328,8 +1330,6 @@
                 </figure>
             </div>
         </div>
-    </div>
+    </section>
 </body>
-<script src="../../Js/others.js"></script>
-
 </html>
