--- a/OtherHTML/GoW_II/GoW_II.html
+++ b/OtherHTML/GoW_II/GoW_II.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
 
     <title> GoWs Wiki: GoW_II </title>
     <link type="Image/x-icon" href="../../Images/Favicon.svg" rel="icon">
 
     <link rel="stylesheet" href="../GoW_II/Sass/GoW_II.css">
 
+    <script src="../../Js/others.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 </head>
 
 <body>
-    <div class="navMenu">
+    <section class="navMenu">
         <img class="BladesOfChaos" src="../../Images/BladeOfChaos.png" alt="BladesOfChaos">
         <img class="Axe" src="../../Images/Axe/Axe.png" alt="Axe">
         <a href="../../index.html" class="logo">
@@ -30,7 +32,7 @@
             </a>
             <div id="showToggleMenu">
                 <a href="#Characters_Weapons">
-                    <p> Персонажи и оружие </p>
+                    <p> Персонажи </p>
                 </a>
                 <div class="toggleMenu">
                     <ul class="toggleList">
@@ -78,14 +80,14 @@
                 </div>
             </div>
             <a href="#Enemies">
-                <p> Вражеские существа </p>
+                <p> Враги </p>
             </a>
             <a href="#Bosses">
                 <p> Боссы </p>
             </a>
         </div>
-    </div>
-    <div class="mainContent">
+    </section>
+    <section class="mainContent">
         <div>
             <h3 id="Description"> Общее описание </h3>
             <div>
@@ -520,68 +522,82 @@
                 </div>
             </div>
             <div id="Clotho">
-                <img src="./Images/Characters/Sister_Fate.webp" alt="Clotho">
-                <p>
-                    Клото - самая младшая (девушка) Сестры Судьбы, с которой сталкивается Кратос, хотя она не похожа на
-                    своих сестер. Она болезненно тучное существо, похожее на шелкопряда, с множеством рук и грудей,
-                    которое находится в многоуровневой ткацкой камере. Она прядет нить каждого смертного, бога и титана.
-                    Кратос должен победить Клото и научиться работать на ткацком станке, чтобы убить Зевса и изменить
-                    свою судьбу-
-                </p>
-                <h3> Силы и способности </h3>
-                <ul>
-                    <li>
-                        Сверхчеловеческая стойкость: как бог, она могла самостоятельно противостоять Кратосу и наносить
-                        огромный урон.
-                    </li>
-                    <li>
-                        Сверхчеловеческая выносливость: Как богу, ей не требовался сон или даже отдых.
-                    </li>
-                    <li>
-                        Сверхчеловеческая сила: как бог, она была достаточно сильна, чтобы причинить Кратосу огромный
-                        урон.
-                    </li>
-                    <li>
-                        Бессмертие: Как бог, она была бессмертной, что означает, что она была невосприимчива к болезням
-                        и не могла стареть.
-                    </li>
-                    <li>
-                        Манипуляция судьбой: Как и ее сестра Атропос, она также могла творить и изменять судьбу.
-                    </li>
-                    <li>
-                        Манипуляция временем: Клото может изменить прошлое и будущее, вся жизнь рождается из созданных
-                        ею нитей.
-                    </li>
-                    <li>
-                        Всеведение: Клото может видеть прошлое, настоящее и будущее каждого существа, включая богов и
-                        титанов.
-                    </li>
-                    <li>
-                        Несколько рук: Клото также имеет несколько рук, которые она использует в бою.
-                    </li>
-                    <li>
-                        Повышенная выносливость: даже когда она получает травму, она может очень быстро восстановиться.
-                    </li>
-                    <li>
-                        Нечеловеческая стойкость: как бог, она могла противостоять огромным мощным атакам.
-                    </li>
-                    <li>
-                        Манипуляция рождением: Клото может манипулировать фертильностью и принимать решения о том, кто
-                        родится.
-                    </li>
-                    <li>
-                        Манипуляция вероятностью: у нее есть возможность манипулировать результатами отдельных людей,
-                        сражений и определенных событий.
-                    </li>
-                    <li>
-                        Призыв: Клото могла вызывать своих миньонов, таких как циклопы, минотавры, сирены и горгоны,
-                        чтобы они сражались на ее стороне и не давали Кратосу добраться до нее и нитей ткацкого станка.
-                    </li>
-                    <li>
-                        Магическое восприятие: Клото смогла почувствовать Кратоса, когда он приблизился к ней, и
-                        предупредила его.
-                    </li>
-                </ul>
+                <div>
+                    <img src="./Images/Characters/Sister_Fate.webp" alt="Clotho">
+                    <p>
+                        Клото - самая младшая (девушка) Сестры Судьбы, с которой сталкивается Кратос, хотя она не похожа
+                        на
+                        своих сестер. Она болезненно тучное существо, похожее на шелкопряда, с множеством рук и грудей,
+                        которое находится в многоуровневой ткацкой камере. Она прядет нить каждого смертного, бога и
+                        титана.
+                        Кратос должен победить Клото и научиться работать на ткацком станке, чтобы убить Зевса и
+                        изменить
+                        свою судьбу-
+                    </p>
+                    <h3> Силы и способности </h3>
+                    <ul>
+                        <li>
+                            Сверхчеловеческая стойкость: как бог, она могла самостоятельно противостоять Кратосу и
+                            наносить
+                            огромный урон.
+                        </li>
+                        <li>
+                            Сверхчеловеческая выносливость: Как богу, ей не требовался сон или даже отдых.
+                        </li>
+                        <li>
+                            Сверхчеловеческая сила: как бог, она была достаточно сильна, чтобы причинить Кратосу
+                            огромный
+                            урон.
+                        </li>
+                        <li>
+                            Бессмертие: Как бог, она была бессмертной, что означает, что она была невосприимчива к
+                            болезням
+                            и не могла стареть.
+                        </li>
+                        <li>
+                            Манипуляция судьбой: Как и ее сестра Атропос, она также могла творить и изменять судьбу.
+                        </li>
+                        <li>
+                            Манипуляция временем: Клото может изменить прошлое и будущее, вся жизнь рождается из
+                            созданных
+                            ею нитей.
+                        </li>
+                        <li>
+                            Всеведение: Клото может видеть прошлое, настоящее и будущее каждого существа, включая богов
+                            и
+                            титанов.
+                        </li>
+                        <li>
+                            Несколько рук: Клото также имеет несколько рук, которые она использует в бою.
+                        </li>
+                        <li>
+                            Повышенная выносливость: даже когда она получает травму, она может очень быстро
+                            восстановиться.
+                        </li>
+                        <li>
+                            Нечеловеческая стойкость: как бог, она могла противостоять огромным мощным атакам.
+                        </li>
+                        <li>
+                            Манипуляция рождением: Клото может манипулировать фертильностью и принимать решения о том,
+                            кто
+                            родится.
+                        </li>
+                        <li>
+                            Манипуляция вероятностью: у нее есть возможность манипулировать результатами отдельных
+                            людей,
+                            сражений и определенных событий.
+                        </li>
+                        <li>
+                            Призыв: Клото могла вызывать своих миньонов, таких как циклопы, минотавры, сирены и горгоны,
+                            чтобы они сражались на ее стороне и не давали Кратосу добраться до нее и нитей ткацкого
+                            станка.
+                        </li>
+                        <li>
+                            Магическое восприятие: Клото смогла почувствовать Кратоса, когда он приблизился к ней, и
+                            предупредила его.
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div id="Zeus">
                 <div>
@@ -882,8 +898,7 @@
                 </figure>
             </div>
         </div>
-    </div>
+    </section>
 </body>
-<script src="../../Js/others.js"></script>
 
 </html>
