--- a/OtherHTML/GoW_III/GoW_III.html
+++ b/OtherHTML/GoW_III/GoW_III.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
 
     <title> GoWs Wiki: GoW_III </title>
     <link type="Image/x-icon" href="../../Images/Favicon.svg" rel="icon">
 
     <link rel="stylesheet" href="../GoW_III/Sass/GoW_III.css">
 
+    <script src="../../Js/others.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 </head>
 
 <body>
     <img class="BladesOfChaos" src="../../Images/BladeOfChaos.png" alt="BladesOfChaos">
-    <div class="navMenu">
+    <section class="navMenu">
         <img class="Axe" src="../../Images/Axe/Axe.png" alt="Axe">
         <a href="../../index.html" class="logo">
             <img src="../../Images/logo.png" alt="logo">
@@ -149,8 +151,8 @@
                 <p> Боссы </p>
             </a>
         </div>
-    </div>
-    <div class="mainContent">
+    </section>
+    <section class="mainContent">
         <div>
             <h3 id="Description"> Общее описание </h3>
             <div>
@@ -1360,7 +1362,6 @@
         <div>
             <h3 id="Enemies"> Вражеские существа </h3>
             <div class="Enemies">
-
                 <figure>
                     <img src="./Images/Enemies/Olympus Sentry.jpg" alt="Olympus Sentry">
                     <p> Страж Олимпа </p>
@@ -1488,8 +1489,6 @@
                 </figure>
             </div>
         </div>
-    </div>
+    </section>
 </body>
-<script src="../../Js/others.js"></script>
-
 </html>
