--- a/OtherHTML/GoW_Ragnarök/GoW_Ragnarök.html
+++ b/OtherHTML/GoW_Ragnarök/GoW_Ragnarök.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
 
     <title> GoWs Wiki: Ragnarök </title>
     <link type="Image/x-icon" href="../../Images/Favicon.svg" rel="icon">
 
     <link rel="stylesheet" href="../GoW_Ragnarök/Sass/GoW_Ragnarök.css">
 
+    <script src="../../Js/others.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 </head>
 
 <body>
-    <div class="navMenu">
+    <section class="navMenu">
         <img class="BladesOfChaos" src="../../Images/BladeOfChaos.png" alt="BladesOfChaos">
         <img class="Axe" src="../../Images/Axe/Axe.png" alt="Axe">
         <a href="../../index.html" class="logo">
@@ -160,8 +162,8 @@
                 <p> Боссы </p>
             </a>
         </div>
-    </div>
-    <div class="mainContent">
+    </section>
+    <section class="mainContent">
         <div>
             <h3 id="Description"> Общее описание </h3>
             <div>
@@ -2206,8 +2208,6 @@
                 </figure>
             </div>
         </div>
-    </div>
+    </section>
 </body>
-<script src="../../Js/others.js"></script>
-
 </html>
