--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div class="navMenu">
+    <section class="navMenu">
         <img class="BladesOfChaos" src="./Images/BladeOfChaos.png" alt="img">
         <img class="logo" src="./Images/logo.png" alt="logo">
         <div class="nav">
@@ -39,8 +39,8 @@
                 <p> Состав разработчиков </p>
             </a>
         </div>
-    </div>
-    <div>
+    </section>
+    <section>
         <p class="GameSeriesLabel"> Серия игр God of War </p>
         <img class="upperGradient" src="./Images/Rectangle25.png" alt="">
         <div class="GameSeriaesConteiner">
@@ -78,8 +78,8 @@
             </div>
         </div>
         <img class="lowerGradient" src="./Images/Rectangle26.png" alt="">
-    </div>
-    <div class="GameSeriaesMobile">
+    </section>
+    <section class="GameSeriaesMobile">
         <h3> Серия игр God of War </h3>
         <a href="./OtherHTML/GoW_Ascension/GoW_Ascension.html">
             <img src="./Images/GameSeriesMobile/Asc.png" alt="Gow:Ascension">
@@ -108,8 +108,8 @@
         <a href="./OtherHTML/GoW_Ragnarök/GoW_Ragnarök.html">
             <img src="./Images/GameSeriesMobile/Ragnarok.png" alt="GoW:Ragnarök">
         </a>
-    </div>
-    <div class="mainContent">
+    </section>
+    <section class="mainContent">
         <div>
             <h3 id="GoW(франшиза)"> <span> God of War (франшиза) </span></h3>
             <div>
@@ -468,7 +468,7 @@
                 <tbody class="DevelopersTable"></tbody>
             </table>
         </div>
-    </div>
+    </section>
 </body>
 
 </html>
