--- a/OtherHTML/GoW(2018)/GoW(2018).html
+++ b/OtherHTML/GoW(2018)/GoW(2018).html
@@ -8,6 +8,7 @@
     <title> GoWs Wiki: GoW(2018) </title>
     <link type="Image/x-icon" href="../../Images/Favicon.svg" rel="icon">
 
+    <link rel="stylesheet" href="../../Sass/other.css">
     <link rel="stylesheet" href="../GoW(2018)/Sass/GoW2018.css">
 
     <script src="../../Js/others.js"></script>
