--- a/OtherHTML/GoW(2005)/GoW(2005).html
+++ b/OtherHTML/GoW(2005)/GoW(2005).html
@@ -9,6 +9,7 @@
     <link type="Image/x-icon" href="../../Images/Favicon.svg" rel="icon">
 
     <link rel="stylesheet" href="../GoW(2005)/Sass/GoW2005.css">
+    <link rel="stylesheet" href="../../Sass/other.css">
 
     <script src="../../Js/others.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
