--- a/OtherHTML/GoW_Ascension/GoW_Ascension.html
+++ b/OtherHTML/GoW_Ascension/GoW_Ascension.html
@@ -9,6 +9,7 @@
     <link type="Image/x-icon" href="../../Images/Favicon.svg" rel="icon">
 
     <link rel="stylesheet" href="../GoW_Ascension/Sass/GoW_Ascension.css">
+    <link rel="stylesheet" href="../../Sass/other.css">
 
     <script src="../../Js/others.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
