--- a/OtherHTML/GoW_GhostofSparta/GoW_GhostofSparta.html
+++ b/OtherHTML/GoW_GhostofSparta/GoW_GhostofSparta.html
@@ -9,6 +9,7 @@
     <link type="Image/x-icon" href="../../Images/Favicon.svg" rel="icon">
 
     <link rel="stylesheet" href="../GoW_GhostofSparta/Sass/GoW_GhostofSparta.css">
+    <link rel="stylesheet" href="../../Sass/other.css">
     
     <script src="../../Js/others.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -28,7 +29,7 @@
                 <p> Общее описание </p>
             </a>
             <a href="#Plot">
-                <p> Повествование сюжет </p>
+                <p> Повествование сюжета </p>
             </a>
             <div id="showToggleMenu">
                 <a href="#Characters_Weapons">
@@ -47,80 +48,50 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#Gaia">
-                                Гейя
-                            </a>
-                        </li>
-                        <li>
                             <a href="#Ares">
                                 Арес
                             </a>
                         </li>
                         <li>
-                            <a href="#Deimos">
-                                Деймос
+                            <a href="#Village Oracle">
+                                Оракул деревни
                             </a>
                         </li>
                         <li>
-                            <a href="#Lanaeus">
-                                Ланеус
+                            <a href="#Oracle of Athens">
+                                Оракул Афин
                             </a>
                         </li>
                         <li>
                             <a href="#Grave Digger">
-                                Могильщик
+                                Копатель могил
                             </a>
                         </li>
                         <li>
-                            <a href="#Midas">
-                                Король Мидас
+                            <a href="#Body Burner">
+                                Сжигатель тела
                             </a>
                         </li>
                         <li>
-                            <a href="#Callisto">
-                                Каллисто
+                            <a href="#Pathos Verdes III">
+                                Пафос Вердес III
                             </a>
                         </li>
                         <li>
-                            <a href="#Thera">
-                                Тера
+                            <a href="#Lysandra_Calliope">
+                                Люсандра и Калиоппа
                             </a>
                         </li>
                         <li>
-                            <a href="#Poseidor">
-                                Посейдон
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#Erinys">
-                                Эринис
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#Thanatos">
-                                Танатос
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#Dissenter">
-                                Несогласный
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#Last Spartan">
-                                Последний спартанец
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#Zeus">
-                                Зевс
+                            <a href="#The Narrator">
+                                Рассказчик (Гейа)
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
             <a href="#Enemies">
-                <p> Враги </p>
+                <p> Вражеские существа </p>
             </a>
             <a href="#Bosses">
                 <p> Боссы </p>
