--- a/OtherHTML/GoW_III/GoW_III.html
+++ b/OtherHTML/GoW_III/GoW_III.html
@@ -9,6 +9,7 @@
     <link type="Image/x-icon" href="../../Images/Favicon.svg" rel="icon">
 
     <link rel="stylesheet" href="../GoW_III/Sass/GoW_III.css">
+    <link rel="stylesheet" href="../../Sass/other.css">
 
     <script src="../../Js/others.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -17,8 +18,8 @@
 </head>
 
 <body>
-    <img class="BladesOfChaos" src="../../Images/BladeOfChaos.png" alt="BladesOfChaos">
     <section class="navMenu">
+        <img class="BladesOfChaos" src="../../Images/BladeOfChaos.png" alt="BladesOfChaos">
         <img class="Axe" src="../../Images/Axe/Axe.png" alt="Axe">
         <a href="../../index.html" class="logo">
             <img src="../../Images/logo.png" alt="logo">
@@ -984,7 +985,7 @@
             </div>
             <div id="Hades">
                 <div>
-                    <img src="./Images/Characters/Hades_-_Ascension.jpg" alt="Hades">
+                    <img src="./Images/Characters/Hades_-_Ascension.webp" alt="Hades">
                     <p>
                         Аид - Бог подземного мира, он противостоит Кратосу в его тронном зале в Подземном мире. После
                         кражи его оружия Кратос вытаскивает его душу, тем самым убивая его и освобождая все мертвые
