--- a/OtherHTML/GoW_Ragnarök/GoW_Ragnarök.html
+++ b/OtherHTML/GoW_Ragnarök/GoW_Ragnarök.html
@@ -8,6 +8,7 @@
     <title> GoWs Wiki: Ragnarök </title>
     <link type="Image/x-icon" href="../../Images/Favicon.svg" rel="icon">
 
+    <link rel="stylesheet" href="../../Sass/other.css">
     <link rel="stylesheet" href="../GoW_Ragnarök/Sass/GoW_Ragnarök.css">
 
     <script src="../../Js/others.js"></script>
